# clidecar

./: .gitignore  CLAUDE.md  README.md  SPEC.md  config.env.example  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.githooks/: pre-commit
bridge/: _hooklib.py  channel.py  control.py  exchange.py  extract-final-text.py  fleet.py  gateway-shim.py  gateway.py  hook-ack.py  hook-final.py  hook-plan.py  hook-progress.py  hook-question.py  hook-stopfailure.py  transcript.py  translate.py
docs/: multi-agent.md  scheduler.md
plugins/: README.md
plugins/discord/: _message.py  client.py  gate.py  history.py  listen.py  msg.sh  plugin.json  poll.py
plugins/discord-bridge/: _hooklib.py  discord-msg.sh  hook-ack.py  hook-final.py  hook-progress.py  plugin.json  transcript.py
state/: queue.md.example  state.md.example
systemd/: clidecar-fallback.service  clidecar.service
