[project]
name = "clidecar-bridge"
version = "0.1.0"
description = "The Claude-aware bridge + gateway daemon for the clidecar harness."
requires-python = ">=3.12"
dependencies = [
    "croniter>=3",
    "holidays>=0.60",
    "discord.py>=2.4",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.390",
]

# The bridge is run as scripts (gateway daemon, hooks, shim), not installed as a
# package, so uv manages the env + deps without trying to build this project.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# `ruff format` owns line length for code; E501 then only nags about unsplittable
# string literals, so defer line length entirely to the formatter.
ignore = ["E501"]

# Consolidated from the former pyrightconfig.json — single source of config.
[tool.pyright]
include = ["bridge", "plugins", "bin/_fleetctl.py"]
# bin/_fleetctl.py adds bridge/ to sys.path at runtime to import fleet.py; mirror that for the checker.
extraPaths = ["bridge"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
